-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.1
-
None
-
-
c73266783 (11.0)
- Remove one Qt version, e.g. 6.5.0.
- Open Qt Creator.
- Go some project using removed version.
- Open Preferences.
- "Replacement for Qt 6.5.0" appears in Preferences.
- Select it and change Qt version in Qt version combo box.
- Press OK
Qt Creator crashes.
| For Gerrit Dashboard: QTCREATORBUG-29204 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 489452,2 | QmakeProjectManager: Prevent infinite loop on ABI change | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |