QmakeProjectManager: Prevent infinite loop on ABI change

Fixes: QTCREATORBUG-29204
Change-Id: I6f4e4fa96f6c48dc83f0e5baf2205421b9ff67ca
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>